<resources>
    <string name="app_name">CodeRescue</string>
    <string name="stitch_client_app_id">tryapplication-tnsrj</string>
    <string name="login_action_label">Log in</string>
    <string name="add_item_action_label">Add</string>
    <string name="clear_checked_action_label">Clear Checked</string>
    <string name="clear_all_action_label">Clear All</string>
    <string name="edit_item_hint">Edit Item</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_safety_guidelines">Safety Guidelines</string>
    <string name="menu_first_aid_guide">First Aid Guide</string>
    <string name="menu_helplines">Helplines</string>
    <string name="menu_compass">Compass</string>
    <string name="menu_map">Map</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ar_notifications">activity_ar_notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="directions_base_url">https://maps.googleapis.com/</string>

    <!--App OnBoarding-->
    <string name="slide1_title">Welcome</string>
    <string name="slide1_desc">NavAR is an Location Based Augmented Reality Navigation Application .
                    Easy to use , Realtime and Fun !</string>

    <string name="slide2_title">Augmented Reality Navigation</string>
    <string name="slide2_desc">Realtime AR navigation to the destination of your choice . Follow the Dots to reach your destination</string>

    <string name="slide3_title">Augmented Reality Point of Interest Browser</string>
    <string name="slide3_desc">View Places around you in AR and in realtime </string>

    <string name="lato_light">fonts/Lato-Light.ttf</string>

    <!--POI Names-->
    <string name="atm">atm</string>
    <string name="hosp">hospital</string>
    <string name="logding">lodging</string>
    <string name="movie">Movie Theater</string>
    <string name="restaurant">restaurant</string>
    <string name="cafe">cafe</string>
    <string name="bakery">bakery</string>
    <string name="bus">Bus Station</string>
    <string name="lib">library</string>
    <string name="mall">Shopping Mall</string>
    <string name="taxi">Taxi Stand</string>
    <string name="pharmacy">pharmacy</string>
    <string name="park">park</string>
    <string name="parking">parking</string>

    <string name="google_maps_key">AIzaSyDCC_Mh6NG2vkOoMep7nDaTHy4_1g1CXxU</string>
</resources>
