<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_light_theme"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news_light_theme"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_safety_guidelines"
            android:icon="@drawable/ic_safety_guidelines_light_theme"
            android:title="@string/menu_safety_guidelines" />
        <item
            android:id="@+id/nav_first_aid_guide"
            android:icon="@drawable/ic_first_aid_light_theme"
            android:title="@string/menu_first_aid_guide" />
        <item
            android:id="@+id/nav_helplines"
            android:icon="@drawable/ic_helpline_light_theme"
            android:title="@string/menu_helplines" />
        <item
            android:id="@+id/nav_compass"
            android:icon="@drawable/ic_compass_light_theme"
            android:title="@string/menu_compass" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_light_theme"
            android:title="@string/menu_map" />
    </group>
</menu>
